--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,10 @@ jobs:
       with:
         files: 'module.json'
       env:
-        version: ${{steps.get_version.outputs.version-without-v}}
+        version: ${{ steps.get-version.outputs.version }}
         url: https://github.com/${{github.repository}}
-        manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
-        download: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/module.zip
+        manifest: https://github.com/${{github.repository}}/releases/${{ steps.get-version.outputs.version }}/download/module.json
+        download: https://github.com/${{github.repository}}/releases/download/${{ steps.get-version.outputs.version }}/module.zip
 
      # Update the 'latest' release
     - name: Create Release
