--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     # Create a zip file with all files required by the module to add to the release
     - name: Zip Files
       working-directory: ./
-      run: zip -r ./module.zip module.json LICENSE styles/ scripts/ templates/ languages/
+      run: zip -r ./module.zip ./*
 
     # get part of the tag after the `v`
     - name: Extract tag version number
@@ -44,7 +44,7 @@ jobs:
         draft: false
         prerelease: false
         token: ${{ secrets.GITHUB_TOKEN }}
-        artifacts: './module.json, ./module.zip'
+        artifacts: './module.zip, ./module.json'
         tag: ${{ steps.get-version.outputs.version }}
         
 
