--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,17 +21,17 @@ jobs:
       id: get-version
       run: echo "::set-output name=version::$(node ./.github/workflows/get-version.js)"
 
-    # Substitute the Manifest and Download URLs in the module.json
-    - name: Substitute Manifest and Download Links For Versioned Ones
-      id: sub_manifest_link_version
-      uses: microsoft/variable-substitution@v1
-      with:
-        files: 'module.json'
-      env:
-        version: ${{ steps.get-version.outputs.version }}
-        url: https://github.com/${{github.repository}}
-        manifest: https://github.com/${{github.repository}}/releases/${{ steps.get-version.outputs.version }}/download/module.json
-        download: https://github.com/${{github.repository}}/releases/download/${{ steps.get-version.outputs.version }}/module.zip
+    # # Substitute the Manifest and Download URLs in the module.json
+    # - name: Substitute Manifest and Download Links For Versioned Ones
+    #   id: sub_manifest_link_version
+    #   uses: microsoft/variable-substitution@v1
+    #   with:
+    #     files: 'module.json'
+    #   env:
+    #     version: ${{ steps.get-version.outputs.version }}
+    #     url: https://github.com/${{github.repository}}
+    #     manifest: https://github.com/${{github.repository}}/releases/${{ steps.get-version.outputs.version }}/download/module.json
+    #     download: https://github.com/${{github.repository}}/releases/download/${{ steps.get-version.outputs.version }}/module.zip
 
      # Update the 'latest' release
     - name: Create Release
