--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,17 +15,17 @@ jobs:
       id: get_version
       uses: battila7/get-version-action@v2
 
-    # # Substitute the Manifest and Download URLs in the module.json
-    # - name: Substitute Manifest and Download Links For Versioned Ones
-    #   id: sub_manifest_link_version
-    #   uses: microsoft/variable-substitution@v1
-    #   with:
-    #     files: 'module.json'
-    #   env:
-    #     version: ${{steps.get_version.outputs.version-without-v}}
-    #     url: https://github.com/${{github.repository}}
-    #     manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
-    #     download: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/module.zip
+    # Substitute the Manifest and Download URLs in the module.json
+    - name: Substitute Manifest and Download Links For Versioned Ones
+      id: sub_manifest_link_version
+      uses: microsoft/variable-substitution@v1
+      with:
+        files: 'module.json'
+      env:
+        version: ${{steps.get_version.outputs.version-without-v}}
+        url: https://github.com/${{github.repository}}
+        manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
+        download: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/module.zip
 
     # Create a zip file with all files required by the module to add to the release
     - run: zip -r ./module.zip module.json main.js LICENSE css/ lang/ templates/ images/
@@ -39,7 +39,7 @@ jobs:
         name: ${{ github.event.release.name }}
         draft: false
         token: ${{ secrets.GITHUB_TOKEN }}
-        artifacts: './module.json, ./module.zip'
+        # artifacts: './module.json, ./module.zip'
         tag: ${{ github.event.release.tag_name }}
         body: ${{ github.event.release.body }}
 
