--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Get Version
         shell: bash
         id: get_version
-        run echo "::set-output name=version::$(node ./.github/workflows/get-version.js)"
+        run: echo "::set-output name=version::$(node ./.github/workflows/get-version.js)"
 
       # # Substitute the Manifest and Download URLs in the module.json
       # - name: Substitute Manifest and Download Links For Versioned Ones
