--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,62 +1,62 @@
-name: Release Creation
+# name: Release Creation
 
-on: 
-  release:
-    types: [published]
+# on: 
+#   release:
+#     types: [published]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
 
-      # Create a zip file with all files required by the module to add to the release
-      - run: zip -r ./module.zip ./*
+#       # Create a zip file with all files required by the module to add to the release
+#       - run: zip -r ./module.zip ./*
 
-      # get version
-      - name: Get Version
-        shell: bash
-        id: get_version
-        run: echo "::set-output name=version::$(node ./.github/workflows/get-version.js)"
+#       # get version
+#       - name: Get Version
+#         shell: bash
+#         id: get_version
+#         run: echo "::set-output name=version::$(node ./.github/workflows/get-version.js)"
 
-      # # Substitute the Manifest and Download URLs in the module.json
-      # - name: Substitute Manifest and Download Links For Versioned Ones
-      #   id: sub_manifest_link_version
-      #   uses: microsoft/variable-substitution@v1
-      #   with:
-      #     files: 'module.json'
-      #   env:
-      #     version: ${{steps.get_version.outputs.version-without-v}}
-      #     url: https://github.com/${{github.repository}}
-      #     manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
-      #     download: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/module.zip
+#       # # Substitute the Manifest and Download URLs in the module.json
+#       # - name: Substitute Manifest and Download Links For Versioned Ones
+#       #   id: sub_manifest_link_version
+#       #   uses: microsoft/variable-substitution@v1
+#       #   with:
+#       #     files: 'module.json'
+#       #   env:
+#       #     version: ${{steps.get_version.outputs.version-without-v}}
+#       #     url: https://github.com/${{github.repository}}
+#       #     manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
+#       #     download: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/module.zip
 
       
 
-      # # Create a release for this specific version
-      # - name: Update Release with Files
-      #   id: create_version_release
-      #   uses: ncipollo/release-action@v1
-      #   with:
-      #     allowUpdates: true # Set this to false if you want to prevent updating existing releases
-      #     name: ${{ github.event.release.name }}
-      #     draft: false
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     artifacts: './module.json, ./module.zip'
-      #     tag: ${{ github.event.release.tag_name }}
-      #     body: ${{ github.event.release.body }}
+#       # # Create a release for this specific version
+#       # - name: Update Release with Files
+#       #   id: create_version_release
+#       #   uses: ncipollo/release-action@v1
+#       #   with:
+#       #     allowUpdates: true # Set this to false if you want to prevent updating existing releases
+#       #     name: ${{ github.event.release.name }}
+#       #     draft: false
+#       #     token: ${{ secrets.GITHUB_TOKEN }}
+#       #     artifacts: './module.json, ./module.zip'
+#       #     tag: ${{ github.event.release.tag_name }}
+#       #     body: ${{ github.event.release.body }}
 
-      # Update the 'latest' release
-      - name: Create Release
-        id: create-release
-        uses: ncipollo/release-action@v1
-        with:
-          allowUpdates: true
-          name: Release ${{ steps.get-version.outputs.version }}
-          draft: false
-          prerelease: false
-          replacesArtifacts: false
-          token: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: './module.json, ./module.zip'
-          tag: ${{ steps.get-version.outputs.version }}
+#       # Update the 'latest' release
+#       - name: Create Release
+#         id: create-release
+#         uses: ncipollo/release-action@v1
+#         with:
+#           allowUpdates: true
+#           name: Release ${{ steps.get-version.outputs.version }}
+#           draft: false
+#           prerelease: false
+#           replacesArtifacts: false
+#           token: ${{ secrets.GITHUB_TOKEN }}
+#           artifacts: './module.json, ./module.zip'
+#           tag: ${{ steps.get-version.outputs.version }}
       
